@@ -68,6 +68,7 @@
 - Keep Guessing: No longer automatically activate --keep-guessing for modes 9720, 9820, 14900 and 18100
 - Kernel Cache: Reactivate OpenCL runtime specific kernel caches
 - Mode 16800/16801 hash format: Changed separator character from '*' to ':'
+- Requirements: Update runtime check for minimum NVIDIA driver version from 367.x to 418.56 or later
 
 * changes v5.0.0 -> v5.1.0
 
